cmake_minimum_required(VERSION 3.19)
project(MY-DP-SOLUTIONS)

set(CMAKE_CXX_STANDARD 14)

add_executable(MY-DP-SOLUTIONS Atcoder-Frog1.cpp Atcoder-Frog2.cpp Atcoder-Vacation.cpp Atcoder-LCS.cpp
                Atcoder-Knapsack1.cpp Atcoder-Knapsack2.cpp Atcoder-Coins.cpp Leetcode-Partition-Equal-Subset-Sum.cpp Leetcode-Arithmetic-Slices.cpp
                    Leetcode-Greatest-Sum-Divisible-3.cpp Atcoder-LongestPath.cpp Atcoder-Grid1.cpp)
